[package]
name = "get-up"
version = "0.1.0"
edition = "2021"
description = "HTTP GET&HEAD service for bytes::Buf object"

[dependencies]
bytes = "1.5.0"
ring = "0.16.20"
brotli-decompressor = "2.3.4"
flate2 = "1.0.27"
# zstd = "0.12.4"
http = "0.2.9"
http-body = "=1.0.0-rc.2"
pin-project-lite = "0.2.13"
tracing = "0.1.37"
tokio = { version = "1.32.0", features = ["sync"] }

[dev-dependencies]
brotli = "3.3.4"
http-body-util = "0.1.0-rc.3"
tokio = { version = "1.32.0", features = ["macros", "rt"] }
